devvpc-scg.tf
resource "aws_security_group" "allow_tls2" {
  name        = "dev"
  description = "Allow TLS inbound traffic"
  vpc_id      = "${aws_vpc.myvpc2.id}"

  
  ingress {
    description = "Open port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  
  ingress {
    description = "TLS from VPC"
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "dev-scg"
  }
}
